--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -25,7 +25,7 @@ Emanations are often overlooked in security planning, but they present a real ri
 graph TD
     A[Security Concepts Overview]
 
-    A --> SPOF[Single Point of Failure (SPOF)]
+    A --> SPOF[Single Point of Failure - SPOF]
     SPOF --> SPOF1[Definition: A component whose failure disrupts the whole system]
     SPOF --> SPOF2[Examples: Single server, internet provider, lone expert]
     SPOF --> SPOF3[Mitigation: Redundancy, backups, failover systems]
@@ -44,13 +44,6 @@ graph TD
     EMAN --> EMAN1[Definition: Unintentional data leaks from electronic signals]
     EMAN --> EMAN2[Examples: Monitor RF leaks, keyboard signal capture]
     EMAN --> EMAN3[Mitigation: Shielding, Faraday cages, encrypted signals, TEMPEST]
-
-    style SPOF fill:#f9f,stroke:#333,stroke-width:1px
-    style BYPASS fill:#ff9,stroke:#333,stroke-width:1px
-    style RACE fill:#9f9,stroke:#333,stroke-width:1px
-    style EMAN fill:#9ff,stroke:#333,stroke-width:1px
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 
 classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
 classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
