Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -16,13 +16,21 @@ Imagine two people trying to withdraw money from the same bank account at the ex
 In cybersecurity, race conditions can be exploited to gain unauthorized access, escalate privileges, or cause system failures. Attackers may repeatedly request access to a resource before security checks can complete, tricking the system into granting them access.
 To prevent race conditions, developers use synchronization mechanisms such as locks, queues, and atomic operations to ensure that processes execute in the correct order and do not interfere with each other.
 
-Emanations refer to unintentional signals or data leaks that electronic devices produce, which can be intercepted and used to extract sensitive information. These signals can come from radio frequencies, electrical signals, or even visual cues like screen reflections.
+**Emanations** refer to unintentional signals or data leaks that electronic devices produce, which can be intercepted and used to extract sensitive information. These signals can come from radio frequencies, electrical signals, or even visual cues like screen reflections.
 For example, an unshielded computer monitor can emit electromagnetic signals that, with the right equipment, can be reconstructed to display what is on the screen from a distance. Similarly, keyboards generate electromagnetic waves when typing, which can be intercepted to determine what keys are being pressed.
 To protect against emanation-based attacks, organizations use shielding techniques such as Faraday cages, specialized hardware that blocks signal emissions, or encrypted transmissions to ensure that intercepted signals do not reveal useful information. The TEMPEST standard is an example of a government effort to protect against emanation risks, particularly in military and intelligence environments.
 Emanations are often overlooked in security planning, but they present a real risk when dealing with highly sensitive environments. Proper countermeasures ensure that even if an attacker is nearby, they cannot easily capture or reconstruct confidential information.
 
+| **Concept**          | **Definition**                                                                                     | **Examples**                                                                                          | **Countermeasures**                                                                                  |
+|----------------------|----------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------|
+| **SPOF**             | A single component whose failure causes a system-wide outage.                                      | Single internet provider, single server, lone administrator.                                          | Add redundancy, use failover systems, train multiple staff.                                            |
+| **Bypass Controls**  | Mechanisms that can be circumvented, allowing unauthorized access.                                 | Software backdoors, propped-open doors bypassing badge access.                                        | Audit controls, restrict backdoor use, monitor activity.                                               |
+| **Race Conditions**  | Unpredictable behavior from simultaneous access to shared resources.                               | Double withdrawal from same bank account, privilege escalation race attacks.                          | Use locks, queues, and atomic operations to manage access.                                             |
+| **Emanations**       | Unintentional signals from devices that can leak sensitive data.                                   | EM leaks from monitors or keyboards intercepted remotely.                                              | Use Faraday cages, signal shielding, encrypted transmission, follow TEMPEST standards.                |
+
+
 ```mermaid
-graph LR
+graph TD
     A[Security Concepts Overview]
 
     A --> SPOF[Single Point of Failure - SPOF]
@@ -48,3 +56,49 @@ graph LR
 classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
 classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
+
+
+### Open Questions ###
+
+1. Why is identifying and eliminating single points of failure (SPOFs) essential in designing resilient systems?
+<details>
+  <summary>Show answer</summary>
+Because SPOFs represent vulnerabilities that can bring down an entire system if one component fails. Eliminating them increases system availability and reliability by ensuring there are backups or failover mechanisms in place.
+</details>
+
+2. How can redundancy help mitigate the risk associated with SPOFs, and what are some practical examples?
+<details>
+  <summary>Show answer</summary>
+Redundancy involves having backup components that can take over in case of failure. For example, using multiple internet providers, redundant power supplies, or mirrored servers ensures that if one fails, the system keeps running.
+</details>
+
+3. What are bypass controls in cybersecurity, and why can they be both useful and dangerous?
+<details>
+  <summary>Show answer</summary>
+Bypass controls are mechanisms that allow users or systems to circumvent normal security processes. They’re useful for emergency access or maintenance but dangerous because attackers can exploit them to gain unauthorized access if not properly monitored and secured.
+</details>
+
+4. Can you describe a real-world scenario where a security bypass might unintentionally be introduced, and what the consequences might be?
+<details>
+  <summary>Show answer</summary>
+An example is when employees prop open a secure door for convenience, bypassing badge access. This could allow unauthorized individuals to enter, potentially leading to data theft or physical damage.
+</details>
+
+5. What is a race condition in computing, and how can it be exploited in a security context?
+<details>
+  <summary>Show answer</summary>
+A race condition occurs when the timing of multiple processes leads to unexpected outcomes. In security, attackers might exploit race conditions to access resources or execute actions before security checks complete, potentially leading to privilege escalation or data corruption.
+</details>
+
+6. What types of controls or practices help developers prevent race conditions in software?
+<details>
+  <summary>Show answer</summary>
+Developers use synchronization techniques like locks, semaphores, queues, and atomic operations to manage access to shared resources and ensure consistent, predictable behavior.
+</details>
+
+7. How can attackers exploit emanations, and what are the most effective defenses against these types of threats?
+<details>
+  <summary>Show answer</summary>
+Attackers can capture unintentional emissions like electromagnetic signals from monitors or keyboards to reconstruct sensitive data. Defenses include using shielded equipment, implementing Faraday cages, encrypting emissions, and following TEMPEST standards in sensitive environments.
+</details>
+
