Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -102,3 +102,154 @@ Developers use synchronization techniques like locks, semaphores, queues, and at
 Attackers can capture unintentional emissions like electromagnetic signals from monitors or keyboards to reconstruct sensitive data. Defenses include using shielded equipment, implementing Faraday cages, encrypting emissions, and following TEMPEST standards in sensitive environments.
 </details>
 
+---
+
+## 3.5.1 Client-based systems ##
+
+Client-based systems are systems where the client-side (usually the user's device or browser) plays a significant role in processing, data storage, or rendering. Examples include:
+
+- Web applications (running in the browser)
+- Mobile apps
+- Desktop software that connects to a backend API
+
+When you use a system where your computer (the client) connects to a central server, there are two main areas where security issues can arise:
+
+- Problems with the client application itself – This includes software bugs, outdated applications, or insecure coding practices.
+- Problems with the system running the client – Even if the software is well-designed, it won’t matter if the operating system or hardware is vulnerable.
+
+1. Weaknesses in How the Client Operates. Some client security issues come from insecure behaviors or misconfigurations, such as:
+
+- Storing sensitive data in a way that unauthorized users can easily access (e.g., leaving temporary files unprotected on the local system).
+- Running outdated or unpatched software, which leaves known security holes open for attackers.
+
+3. Problems with How the Client Communicates with the Server. Many vulnerabilities arise when the client connects to a remote server but fails to secure that communication properly. Issues include:
+
+- Not verifying the identity of the server – The client could end up connecting to a fake (malicious) server.
+- Not checking or sanitizing data from the server – If the client accepts any data without validation, attackers can send harmful input that may lead to security breaches.
+- Lack of encryption – Without secure protocols, attackers can intercept and read sensitive data.
+- Failure to detect if the data has been tampered with – If no integrity checks are in place, hackers could modify the information in transit.
+- Executing commands from the server without validation – A compromised server could send malicious instructions that the client blindly follows.
+
+Clients often rely on third-party components, such as libraries or plugins (e.g., Java). These add-ons must be included in a vulnerability management program, ensuring that any newly discovered flaws are patched quickly.
+
+For **web-based applications**, browsers must be hardened by following security guidelines from trusted sources like the Center for Internet Security (CIS) and the Defense Information Systems Agency (DISA). Similarly, the underlying operating system should also be secured and kept up to date.
+
+Beyond software security, protecting the client system also means implementing:
+- Firewalls to block unauthorized network access.
+- Physical security controls to prevent device theft or tampering.
+- Full-disk encryption to protect stored data in case of a system compromise.
+
+When organizations develop their **own client applications**, they must follow secure software development practices to prevent vulnerabilities from being introduced in the first place. A structured development approach, ensures that security is built into the software from the start.
+
+:link: Refer also to chapter 8 TBD
+
+:necktie: Assume the client is hostile — validate everything server-side
+
+### Open Questions ###
+
+1. What are some common vulnerabilities found in client applications, and how can they be mitigated?
+<details>
+  <summary>Show answer</summary>
+Common client-side vulnerabilities include storing sensitive data insecurely (like unprotected temp files), running outdated software, and using poorly coded applications. These can be mitigated by regularly applying patches, following secure coding practices, and avoiding the storage of unencrypted sensitive data on the client.
+</details>
+
+2. Why is it risky for a client application to connect to a server without verifying its identity?
+<details>
+  <summary>Show answer</summary>
+If the client does not verify the server’s identity, it may unknowingly connect to a malicious or fake server. This opens the door to man-in-the-middle (MITM) attacks, data theft, or receiving malicious instructions. Secure protocols like TLS with certificate validation help prevent this risk.
+</details>
+
+3. How can insecure communication between the client and server lead to data breaches?
+<details>
+  <summary>Show answer</summary>
+Without encryption and integrity checks, attackers can intercept, read, modify, or inject data in transit. This could expose sensitive information or allow attackers to alter data silently. Using TLS, input validation, and digital signatures helps secure communications and prevent tampering.
+</details>
+
+4. What role do third-party components (like plugins or libraries) play in client security, and how should organizations manage them?
+<details>
+  <summary>Show answer</summary>
+Third-party components often process data and extend application functionality, but they can introduce vulnerabilities if they’re outdated or poorly maintained. Organizations must track, patch, and test these components regularly as part of a vulnerability management program.
+</details>
+
+5. Besides software controls, what physical and system-level protections should be in place on client devices?
+<details>
+  <summary>Show answer</summary>
+To protect client systems, organizations should implement firewalls to block unauthorized access, full-disk encryption to protect stored data, and physical security (like locking workstations or restricting device access) to prevent theft or tampering.
+</details>
+
+---
+
+## 3.5.2 Server-based systems ##
+
+Server-based systems are computing architectures where the core processing, data storage, and application logic happen on a central server, rather than on the individual client devices.
+
+Just like clients, servers have their own security risks. The main difference is perspective: while a client sends requests, the server processes and responds to them. However, both are just computers playing different roles in a system, meaning they face many of the same threats.
+
+A critical security measure for a server is verifying who is connecting to it. This means checking both the device (client) and the user logging in. Servers achieve this through Identity and Access Management (IAM) techniques, which include:
+- Authentication (e.g., usernames, passwords, multi-factor authentication).
+- Secure communication using TLS (Transport Layer Security), which encrypts data and can use client-side certificates to confirm identity.
+
+TLS also protects against eavesdropping and tampering, preventing Man-in-the-Middle (MITM) attacks, where an attacker intercepts and alters communication between the client and server.
+
+Servers must never assume that data received from a client is safe, even if the client has passed authentication. Attackers can manipulate or inject malicious commands before they are encrypted and sent to the server. This is why **input validation** is critical. All incoming data should be checked for harmful content before being processed.
+
+Servers are often targeted by Denial-of-Service (DoS) attacks, where attackers flood them with fake requests to overload the system. To reduce this risk, servers can implement:
+
+- Rate-limiting to restrict how many requests a user can make in a short time.
+- CAPTCHAs to differentiate between real users and automated bots.
+- Traffic filtering to block suspicious patterns of activity.
+
+A vulnerability management program is essential for keeping the server safe. This means regularly applying updates and security patches to fix weaknesses in both:
+- Custom-built applications (if the organization develops its own server software).
+- Third-party software (such as commercial off-the-shelf (COTS) products).
+
+The server should also follow the principle of **least privilege**, meaning it should only have the minimum permissions needed to function. If the server needs higher privileges for a task, it should only use them temporarily and then return to a restricted mode.
+
+To prevent data leakage and unauthorized access, the server should:
+
+- Use file system permissions to restrict who can access or modify data.
+- Log all key activities, such as failed login attempts and actions performed by users with special privileges.
+- Monitor logs for unusual behavior that might indicate a security breach.
+- Collect forensic data to help investigate and respond to security incidents.
+
+Servers are not only vulnerable to cyber threats but also to physical risks, such as theft, power failures, and natural disasters. Organizations should:
+
+- Secure server rooms with access controls.
+- Use backup power solutions (like UPS systems).
+- Follow best practices for server hardening, which means configuring the system securely to reduce attack surfaces.
+
+:link: [CIS Benchmarks](https://www.cisecurity.org/cis-benchmarks) contain recommended security settings for different operating systems and software.
+
+### Open Questions ###
+
+1. Why is verifying the identity of both the device and user connecting to a server important for security?
+<details>
+  <summary>Show answer</summary>
+Because it ensures that only authorized users and devices can access the server. This is achieved through Identity and Access Management (IAM) tools like authentication, multi-factor authentication, and TLS with client certificates, which protect against impersonation and unauthorized access.
+</details>
+
+2. What measures should a server take to protect itself from malicious data sent by clients?
+<details>
+  <summary>Show answer</summary>
+A server should never trust input from clients. Even authenticated users can send harmful data. To mitigate this risk, servers must validate all incoming data, sanitize inputs, and use security filters to detect and block injection attacks (like SQL injection or command injection).
+</details>
+
+3. How can a server defend itself against Denial-of-Service (DoS) attacks?
+<details>
+  <summary>Show answer</summary>
+Servers can reduce DoS impact through rate limiting (restricting request frequency per user), using CAPTCHAs to filter out bots, and implementing traffic filtering to detect and block suspicious or high-volume traffic patterns indicative of automated attacks.
+</details>
+
+4. Why is a vulnerability management program crucial for server security?
+<details>
+  <summary>Show answer</summary>
+Because both custom and third-party server software can contain vulnerabilities. A good vulnerability management program ensures regular patching and updates, minimizing the window of exposure to known threats and helping maintain a strong security posture.
+</details>
+
+5. What are some key best practices to protect a server from both cyber and physical threats?
+<details>
+  <summary>Show answer</summary>
+Servers should follow the principle of least privilege, use file permissions, log critical activities, and monitor logs for anomalies. Physically, servers should be kept in secured rooms, with UPS systems for power continuity, and hardened configurations following security benchmarks from CIS and NIST.
+</details>
+
+---
