Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -253,3 +253,48 @@ Servers should follow the principle of least privilege, use file permissions, lo
 </details>
 
 ---
+
+
+## 3.5.3 Database Systems ##
+
+Databases store valuable information, so keeping them secure is critical. Many security controls exist, but let's focus on the most important ones that apply to most database systems. Some Key Database Security Practices are:
+1. Only Install What You Need: a database system often comes with many optional features, but enabling everything increases the attack surface. Disable or uninstall anything your application doesn't require to reduce vulnerabilities.
+2. Keep Data and Logs Separate from System Files: store databases and log files on different partitions from the operating system. This helps with performance, security, and recovery in case of failures.
+3. Lock Down File Permissions: ensure that only authorized users and database services can access database directories, log files, and configuration settings. Restrict access based on the principle of least privilege.
+4. Use Dedicated, Low-Privilege Accounts: the database should run under a dedicated, unprivileged service account—never as a full administrator. This limits damage if the account is compromised.
+5. Encrypt Connections with TLS: when databases communicate over a network, encrypt the data using TLS (Transport Layer Security). This prevents attackers from intercepting sensitive information.
+6. Enforce Strong Authentication and Access Control
+- Require strong passwords for all accounts and disable default accounts if they exist.
+- Use multi-factor authentication (MFA) where possible.
+- Assign user permissions based on the least privilege principle—only give users access to the data they absolutely need.
+7. Remove Sample Databases and Unused Accounts: many database systems include test databases and default accounts that can be exploited if left enabled. Remove them immediately after installation.
+8. Monitor and Log Activities
+- Enable detailed logging of all critical operations.
+- Send logs to a separate, secure logging system so database administrators cannot tamper with them.
+- Regularly review logs for suspicious activity.
+9. Use Secure Coding Practices to prevent SQL injection and other attacks:
+- Use bind variables when writing queries to prevent attackers from injecting malicious code.
+- Validate and sanitize all user input before processing.
+10. Assign Unique Admin Accounts: each administrator should have a unique account rather than sharing a common “admin” user. This helps track actions and apply role-based access control (RBAC) properly.
+11. Enforce Separation of Duties: avoid giving one person too much power over the database. For critical operations, require at least two administrators to approve or execute actions.
+12. Follow Vendor-Specific Best Practices: Different databases (e.g., Oracle, SQL Server, MySQL, PostgreSQL) have unique security settings. Always check the vendor’s documentation and enable security features like Oracle's Data Dictionary Protection, which limits what even admins can do.
+
+:link: Refer also to chapter 8 TBD
+
+**Data at rest** refers to information stored in a database, whether in tables, files, or backups. Protecting this data is essential and can be done with the following key Methods:
+- **Transparent Data Encryption (TDE):** Encrypts database files at the storage level. Many databases, like SQL Server and Oracle, support this feature.
+- **Column-Level Encryption:** Encrypts specific columns containing sensitive data, such as passwords or credit card numbers.
+- **Full-Disk Encryption:** Encrypts the entire storage drive where the database resides. This helps if someone physically steals the disk but does not protect against internal threats.
+
+**Data in motion** refers to data being transmitted between a database and an application or another server. Encrypting this data ensures that attackers cannot intercept it. Key Methods to encrypt data in motion are:
+- **Transport Layer Security (TLS):** Encrypts data traveling over the network, preventing eavesdropping. Always enable TLS for database connections.
+- **VPNs and Secure Tunnels:** If your database traffic moves across external networks, a VPN adds another layer of encryption.
+
+ There are some other threats that come from how databases work under the hood:
+ | **Attack Type**         | **Description (Plain English)**                                                                                  | **How to Defend**                                                                                 |
+|-------------------------|-------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------|
+| **Concurrency Issues**  | Two people try to update data at the same time, and one change might overwrite the other.                        | Use locking, transactions, and isolation levels to manage simultaneous access.                    |
+| **Aggregation Attacks** | Attacker collects small, harmless data to figure out something sensitive like a salary.                          | Use views to limit data exposure, apply query limits.                                              |
+| **Inference Attacks**   | Attacker guesses private data by noticing changes in query results when filters are applied.                     | Use polyinstantiation, noise injection, or data masking to confuse pattern-based guessing.        |
+| **Excessive Privileges**| Users or apps have more access than needed—if compromised, attackers get full access.                            | Apply least privilege, use RBAC (Role-Based Access Control), and audit permissions regularly.     |
+| **Stored Procedure Abuse** | Malicious input is injected into database scripts to manipulate the system.                                  | Validate input, use parameterized queries, and restrict permissions on stored procedures.         |
