Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -291,10 +291,44 @@ Databases store valuable information, so keeping them secure is critical. Many s
 - **VPNs and Secure Tunnels:** If your database traffic moves across external networks, a VPN adds another layer of encryption.
 
  There are some other threats that come from how databases work under the hood:
- | **Attack Type**         | **Description (Plain English)**                                                                                  | **How to Defend**                                                                                 |
+ | **Attack Type**         | **Description**                                                                                  | **How to Defend**                                                                                 |
 |-------------------------|-------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------|
 | **Concurrency Issues**  | Two people try to update data at the same time, and one change might overwrite the other.                        | Use locking, transactions, and isolation levels to manage simultaneous access.                    |
 | **Aggregation Attacks** | Attacker collects small, harmless data to figure out something sensitive like a salary.                          | Use views to limit data exposure, apply query limits.                                              |
 | **Inference Attacks**   | Attacker guesses private data by noticing changes in query results when filters are applied.                     | Use polyinstantiation, noise injection, or data masking to confuse pattern-based guessing.        |
 | **Excessive Privileges**| Users or apps have more access than needed—if compromised, attackers get full access.                            | Apply least privilege, use RBAC (Role-Based Access Control), and audit permissions regularly.     |
 | **Stored Procedure Abuse** | Malicious input is injected into database scripts to manipulate the system.                                  | Validate input, use parameterized queries, and restrict permissions on stored procedures.         |
+
+### Open Questions ###
+
+1. Why should you disable optional features in a database system?
+<details>
+  <summary>Show answer</summary>
+Optional features may look useful, but they can create new security holes. If your application doesn’t need them, it’s safer to disable or uninstall them. This reduces the attack surface—meaning there’s less for hackers to target.
+</details>
+
+2. What’s the risk of running a database with full administrator privileges?
+<details>
+  <summary>Show answer</summary>
+If the database is hacked and it's running with admin rights, attackers can take over the whole system. That’s why it’s better to use a special low-privilege account just for the database—it limits the damage if something goes wrong.
+</details>
+
+3. What’s the difference between data at rest and data in motion, and how do we protect them?
+<details>
+  <summary>Show answer</summary>
+Data at rest is stored data—like in tables or backups. We protect it using things like Transparent Data Encryption (TDE) or full-disk encryption. Data in motion is data traveling over a network, and we protect it using TLS or VPNs to stop eavesdroppers from stealing it.
+</details>
+
+4. What are aggregation and inference attacks, and how can you prevent them?
+<details>
+  <summary>Show answer</summary>
+Aggregation is when someone collects bits of data to guess something sensitive. Inference is when someone makes smart guesses by watching patterns. To prevent them, you can use views, add noise to results, or even show slightly different versions of the same data (polyinstantiation) to confuse attackers.
+</details>
+
+5. Why is it important to assign unique admin accounts instead of sharing one?
+<details>
+  <summary>Show answer</summary>
+When everyone uses the same “admin” login, there’s no way to know who did what. If each admin has their own account, you can track their actions, apply the right permissions, and hold the right person accountable if something goes wrong.
+</details>
+
+---
